2004-02-11  mput <root@mput.dip.jp>

	* configure.in: version to 2.13.0-rc1

2004-02-11  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c, timidity/au_a.c, timidity/mac_a.c,
	  timidity/output.c, timidity/raw_a.c, timidity/wave_a.c
	  Fixes for 24-bit output.

2004-02-11  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix some codes for 24bit output

2004-02-11  Kouji 'kekyo' Suzuki <k@kekyo.net>

	* interface/w32g_syn.c, configs/msc7-project.zip:
	  Support for TWSYNSRV.

2004-02-11  Saito <saito2@digitalme.com>
	* timidity/output.[ch], timidity/wave_a.c,
	  timidity/w32_a.c, timidity/aq.c,
	  timidity/effect.c, timidity/timidity.c, interface/w32g_utl.c:
	  Fix some codes for 24bit output.
	  Swap s32tos24() and s32tos24x().
	* timidity/reverb.[ch], timidity/playmidi.[ch],
	  timidity/mix.c, timidity/sndfont.c,
	  interface/w32g_utl.[ch], interface/w32g_res.rc,
	  interface/w32g_pref.c, interface/w32g_ini.c:
	  Remove opt_effect_quality.
	  Fix typos.

2004-02-10  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c, timidity/w32_gogo.c,
	  timidity/gogo_a.c:
	  Change <gogo.h> to <gogo/gogo.h>.
	* configs/msc[67]-project.zip:
	  Add header files of Ogg Vorbis and gogo.

2004-02-10  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* aclocal.m4, configure(.in), config.h.in, Makefile.{am,in},
	  {autoconf,configs,doc(/{C,ja_JP.ujis}),
	  interface(/bitmaps)}/Makefile.in:
	  Sorry, revert fix due to make dist problem

2004-02-10  Kouji 'kekyo' Suzuki <k@kekyo.net>

	* interface/rtsyn_winmm.c, interface/w32g_i.c,
	  interface/w32g_ini.c, interface/w32g_pref.c,
	  interface/w32g_res.[ch], interface/w32g_syn.c,
	  interface/w32g_utl.[ch], interface/w32g.h:
	  Add process-priority function to TWSYNG.
	* configs/msc7-project.zip, timidity/calcnewt.c: Fix.

2004-02-09  mput <root@mput.dip.jp>

	* Makefile.am (install-data-local): ditto
	* configure.in: Add --with-ad-dir=DIR

2004-02-09  Saito <saito2@digitalme.com>
